# ChangeLog for net-p2p/bittorrent
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/ChangeLog,v 1.127 2008/01/16 15:32:28 armin76 Exp $

*bittorrent-5.0.9-r1 (16 Jan 2008)
*bittorrent-4.4.0-r1 (16 Jan 2008)

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> -bittorrent-4.4.0.ebuild,
  +bittorrent-4.4.0-r1.ebuild, -bittorrent-5.0.9.ebuild,
  +bittorrent-5.0.9-r1.ebuild:
  Remove virtual/bittorrent

  14 Jan 2008; Raúl Porcel <armin76@gentoo.org> -bittorrent-5.0.7.ebuild:
  old

  28 Dec 2007; Raúl Porcel <armin76@gentoo.org> bittorrent-5.0.9.ebuild:
  Make it not die with wxpython-2.8 installed, bug #202813, patch by
  <dynamotwain at aim dot com>

  23 Nov 2007; Markus Rothe <corsair@gentoo.org> bittorrent-5.0.9.ebuild:
  Stable on ppc64; bug #199882

  21 Nov 2007; nixnut <nixnut@gentoo.org> bittorrent-5.0.9.ebuild:
  Stable on ppc wrt bug 199882

  21 Nov 2007; Jeroen Roovers <jer@gentoo.org> bittorrent-5.0.9.ebuild:
  Stable for HPPA (bug #199882).

  21 Nov 2007; Samuli Suominen <drac@gentoo.org> bittorrent-5.0.9.ebuild:
  amd64 stable wrt #199882

  21 Nov 2007; Raúl Porcel <armin76@gentoo.org> bittorrent-5.0.9.ebuild:
  alpha/ia64/sparc stable

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org> bittorrent-5.0.9.ebuild:
  Stable on x86

*bittorrent-5.0.9 (16 Oct 2007)

  16 Oct 2007; Raúl Porcel <armin76@gentoo.org> +bittorrent-5.0.9.ebuild:
  Version bump wrt #196022

  29 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> bittorrent-5.0.7.ebuild:
  Lock wxGTK to 2.6.

  24 Jun 2007; Raúl Porcel <armin76@gentoo.org> -bittorrent-5.0.5.ebuild:
  old

  21 Jun 2007; Raúl Porcel <armin76@gentoo.org> -bittorrent-5.0.6.ebuild:
  old

  09 Jun 2007; Joe Peterson <lavajoe@gentoo.org> bittorrent-5.0.7.ebuild:
  Add ~x86-fbsd keyword

  15 May 2007; Raúl Porcel <armin76@gentoo.org> bittorrent-5.0.7.ebuild:
  alpha stable wrt bug 167783
