@@ -2,7 +2,7 @@ AUX bittorrent-tracker.confd 565 RMD160 9a21fec4c8b654ed71ac0a1425943622cd1b525f
 AUX bittorrent-tracker.initd 653 RMD160 4546d4d647969f91f623d98bc80ef53dc86a2117 SHA1 898ed64266ac07c53c8536223b1851a2fc5b671d SHA256 5f70c794dcc5d821df1224168ac449fd94983a7f9eeb3e498d31fc369b3b2ff3
 DIST BitTorrent-4.4.0.tar.gz 1255281 RMD160 9e743b3178142855d289743d4430598353fb4d3f SHA1 8ca3e52c8049ff29a6785da410d6aa80c6726882 SHA256 1c9338ed384240258b5733a814670e2dee8ca2fb65babf3f0ca07978707301e0
 DIST BitTorrent-5.0.9.tar.gz 2497550 RMD160 631d88c31ebd2f656477791db18e6a868349a2d5 SHA1 b610c811590aad6ec25fc7b30acb9e0264443121 SHA256 4459f694609328e55f829fe2e1143518e35f471aed7814da7689fee5d422f705
-EBUILD bittorrent-4.4.0-r1.ebuild 1848 RMD160 bd5f471446e3c380070d8899f9ec15171d404fa0 SHA1 2f6075b9bb12f9c60985ee2c21b05e4052c4c21c SHA256 435a8c5334a28856021be2f145efb1019143f03aeed3d7e3524ff0fd31064621
-EBUILD bittorrent-5.0.9-r1.ebuild 2406 RMD160 0c67605fd0b6c11f45622317d393d88a609a33bc SHA1 25c24e04720a7a651dbb7abd093994be13229781 SHA256 1d75a83a2b62436919cf1c90107c829ec2271499ec46bb7208492641005807c7
-MISC ChangeLog 18367 RMD160 6abfef351d58a67778375c3f3a1c08fe4709fe5e SHA1 93ccc7100f5b1ce590e078019582aadcdf1c7414 SHA256 f09bcde6d873b60a14fc00ce7a935427ba1f478a1ac75a42c00363f4638c810b
+EBUILD bittorrent-4.4.0-r1.ebuild 1827 RMD160 6b1d4f50622f9430451a942cd84b2e8318119a79 SHA1 ffa20a75b66401dc48faa22345b481ab3cbd8564 SHA256 72ba7365f045f1d1b4604bb74d39247afb261ba83b9c13b90fb5223fa443fa84
+EBUILD bittorrent-5.0.9-r1.ebuild 2385 RMD160 e6fcd5cd9e372fc82a6d495e0dc19510ecc68a42 SHA1 cf1ff7eb9d8cfa9933cd9e6dc8bddebad7f816be SHA256 91e79f56f263fd98f0f8900c699d859ae854d4bc27287894ab343d869876d74b
+MISC ChangeLog 18534 RMD160 b0fc5768b2631108b5b0fa88fb11e9e46310749c SHA1 525296dbc74f761de9181bd69ef48da83215fb92 SHA256 2971260b1f4bcdb14f3c9524330d7fde31117ba1b443a4453fbea7b30929658f
 MISC metadata.xml 160 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd SHA1 813ef5bc57f6a8d95e7cab7a745a2a824858f49c SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f
