@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/bittorrent-4.4.0-r1.ebuild,v 1.1 2008/01/16 15:32:28 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/bittorrent-4.4.0-r1.ebuild,v 1.2 2008/01/17 14:15:30 armin76 Exp $
 
 EAPI="prefix"
 
@@ -24,8 +24,7 @@ RDEPEND=">=dev-lang/python-2.3
 		>=x11-libs/gtk+-2.6
 		>=dev-python/pygtk-2.6
 	)
-	>=dev-python/pycrypto-2.0
-	!net-p2p/bittornado"
+	>=dev-python/pycrypto-2.0"
 DEPEND="${RDEPEND}
 	app-arch/gzip
 	>=sys-apps/sed-4.0.5
