@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/bittorrent-5.0.9-r1.ebuild,v 1.1 2008/01/16 15:32:28 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/bittorrent-5.0.9-r1.ebuild,v 1.2 2008/01/17 14:15:30 armin76 Exp $
 
 EAPI="prefix"
 
@@ -25,8 +25,7 @@ RDEPEND=">=dev-lang/python-2.3
 	>=dev-python/pycrypto-2.0
 	>=dev-python/twisted-2
 	dev-python/twisted-web
-	net-zope/zopeinterface
-	!net-p2p/bittornado"
+	net-zope/zopeinterface"
 DEPEND="${RDEPEND}
 	app-arch/gzip
 	>=sys-apps/sed-4.0.5
