@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/bittorrent
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/ChangeLog,v 1.127 2008/01/16 15:32:28 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/ChangeLog,v 1.128 2008/01/17 14:15:30 armin76 Exp $
+
+  17 Jan 2008; Raúl Porcel <armin76@gentoo.org> bittorrent-4.4.0-r1.ebuild,
+  bittorrent-5.0.9-r1.ebuild:
+  Remove blocker on net-p2p/bittornado, they don't collide
 
 *bittorrent-5.0.9-r1 (16 Jan 2008)
 *bittorrent-4.4.0-r1 (16 Jan 2008)
